# payment_ms

./: .dockerignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml
api_payment/: .env  Cargo.toml  Rocket.toml
api_payment/migrations/2021-11-27-025516_create_credit_cards/: up.sql
api_payment/migrations/2021-11-27-025534_create_payments/: up.sql
api_payment/src/: controllers.rs  database.rs  main.rs  models.rs  schema.rs
api_payment/src/controllers/: credit_cards_controller.rs  payments_controller.rs
api_payment/src/models/: credit_cards.rs  payments.rs
