[package]
name = "api_payment"
version = "0.1.0"
edition = "2021"
authors = [ "Camilo Ayala" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }

diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"